# pldf

./: .gitignore  AGENTS.md  LICENSE  QUICKSTART.md  README.md  build.ps1  build.sh  pyproject.toml
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
hints/: hints.json  resources.json
src/pldf_cli/: __init__.py
templates/: architecture-template.md  concept-template.md  decision-log-section-template.md  deployment-template.md  html-prototype-template.html  index-prototype-template.html  project-context-template.md  review-template.md  security-audit-template.md  tech-stack-template.md  ui-design-template.md  vscode-settings.json
templates/commands/: pldf.architecture.md  pldf.concept.md  pldf.deploy.md  pldf.design.md  pldf.hint.md  pldf.implement.md  pldf.plan.md  pldf.review.md  pldf.security.md  pldf.tech.md  pldf.test.md
