[project]
name = "pldf-cli"
version = "0.1.0"
description = "CLI tool for Progressive Learning Development Framework (PLDF) - an educational framework for learning software development with LLM agents"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
pldf = "pldf_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pldf_cli"]

